# baggage_advisor_template

./: .gitignore  LICENSE  README.md
baggage_advisor/: CMakeLists.txt  README.md  package.xml
baggage_advisor/config/: camera.yaml
baggage_advisor/include/baggage_advisor/: advisor.hpp
baggage_advisor/launch/: baggage_advisor.launch.py
baggage_advisor/src/: advisor.cpp  baggage_advisor.ddl  baggage_advisor.ruleset
barcode_msgs/: CMakeLists.txt  README.md  package.xml
barcode_msgs/msg/: Barcode.msg  ScanResult.msg
barcode_scan/: CMakeLists.txt  README.md  package.xml
barcode_scan/include/barcode_scan/: scanner.hpp
barcode_scan/src/: scanner.cpp
demo_assets/: README.md
image_draw/: CMakeLists.txt  README.md  package.xml
image_draw/include/image_draw/: image_draw.hpp
image_draw/src/: image_draw.cpp
image_draw_msgs/: CMakeLists.txt  README.md  package.xml
image_draw_msgs/msg/: ImageMarker.msg
