<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>baggage_advisor</name>
  <version>0.0.1</version>
  <description>This package bridges ROS2 messages and a Gaia Platform declarative ruleset for the airport-themed Baggage Advisor application template.</description>
  <maintainer email="engineering@gaiaplatform.io">Gaia Platform</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>launch</depend>
  <depend>ament_index_cpp</depend>

  <depend>barcode_msgs</depend>
  <depend>image_draw_msgs</depend>

  <exec_depend>image_draw</exec_depend>
  <exec_depend>barcode_scan</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
