<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_draw</name>
  <version>0.0.1</version>
  <description>A package for drawing 2D markers over images.</description>
  <maintainer email="engineering@gaiaplatform.io">Gaia Platform</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>launch</depend>

  <depend>cv_bridge</depend>
  <depend>image_draw_msgs</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
